--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -9,10 +9,10 @@
       </ul>
     </div>
   <% end %>
-  <%= f.label :content %>
-  <%= f.text_field :content %>
+  <%= f.label :コメント %>
+  <%= f.text_field :content, class: 'form-control' %>
   <br>
-  <%= f.submit %>
+  <%= f.submit '投稿', class: 'btn btn-primary btn-block' %>
 <% end %>
 
 <%= link_to "写真一覧画面にもどる", pictures_path %>
