--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,8 +1,12 @@
-<%= form_for(@picture) do |f| %>
-  <%= f.label :content %>
-  <%= f.text_field :content %>
-  <br>
-  <%= f.submit %>
-<% end %>
-
-<%= link_to "写真一覧画面にもどる", pictures_path %>
+<div class="container">
+  <div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
+    <%= form_for(@picture) do |f| %>
+    <br>
+    <%= f.label :コメント%>
+    <%= f.text_field :content, class: 'form-control' %>
+    <br>
+    <%= f.submit "更新", class: 'btn btn-primary btn-block' %>
+    <% end %>
+    <%= link_to "写真一覧画面にもどる", pictures_path %>
+  </div>
+</div>
