--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,11 +1,13 @@
-<p><%= notice %></p>
-
-<h1>写真一覧</h1>
-
-<% @pictures.each do |picture| %>
-  <p>コメント:<%= picture.content %></p>
-  <%= link_to "写真を編集する", edit_picture_path(picture.id) %>
-  <%= link_to "写真を削除する", picture_path(picture), method: :delete, data: {confirm: '本当に削除しても？'} %>
-<% end %>
-
-<%= link_to "写真を投稿する", new_picture_path %>
+<div class="container">
+  <div class="wrapper col-md-8 col-md-offset-2 col-sm-10">
+    <p><%= notice %></p>
+    <h1>写真一覧</h1>
+    <% @pictures.each do |picture| %>
+      <p>コメント:<%= picture.content %></p>
+      <%= link_to "写真を編集する", edit_picture_path(picture.id) %>
+      <%= link_to "写真を削除する", picture_path(picture), method: :delete, data: {confirm: '本当に削除しても？'} %>
+    <% end %>
+    <br>
+    <%= link_to "写真を投稿する", new_picture_path %>
+  </div>
+</div>
