--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -68,7 +68,7 @@ header {
 
 footer {
   width: 100%;
-  background-color:lightblue;
+  background-color:black;
   padding: 20px 0;
   color: white;
   margin: auto;
@@ -94,4 +94,9 @@ footer {  /*<footer class="footer">*/
   /* Set the fixed height of the footer here */
   height: 75px;
   // background-color: #f5f5f5;
+}
+
+.flash {
+  color: black;
+  padding-top: 10px;
 }
