--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -1,14 +1,5 @@
 <%= form_for(@picture, url: choose_new_or_edit) do |f| %>
-  <% if @picture.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= @picture.errors.count %>件のエラーがあります。</h2>
-      <ul>
-        <% @picture.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= f.error_messages! %>
   <%= f.label :コメント %>
   <%= f.text_field :content, class: 'form-control' %>
   <br>
