--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="wrapper col-md-4 col-md-offset-4 col-sm-10">
 
-    <h2>Sign up</h2>
+    <h2>サインアップ</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_messages! %>
@@ -18,7 +18,7 @@
 
         <div class="field">
           <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <em>(パスワードは<%= @minimum_password_length %>文字以上で)</em>
         <% end %><br />
         <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "パスワード" %>
         </div>
@@ -26,12 +26,11 @@
         <div class="field">
           <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "パスワード（確認）" %>
         </div>
-
+        <br>
         <div class="actions">
           <%= f.submit "サインアップ",class: "btn btn-primary btn-block" %>
         </div>
     <% end %>
-
     <%= render "devise/shared/links" %>
   </div>
 </div>
