--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -1,10 +1,15 @@
 <%= form_for(@picture, url: choose_new_or_edit) do |f| %>
   <%= f.error_messages! %>
+  <%= f.label :写真 %>
+  <br>
+  <%= image_tag @picture.image.url if @picture.image? %>
+  <%= f.file_field :image %>
+  <%= f.hidden_field :image_cache %>
   <%= f.label :コメント %>
   <%= f.text_field :content, class: 'form-control' %>
   <br>
 
   <%= f.submit '投稿', class: 'btn btn-primary btn-block' %>
 <% end %>
-
-<%= link_to "写真一覧画面にもどる", pictures_path %>
+<br>
+<%= link_to "写真一覧画面にもどる", pictures_path, class: 'btn btn-default btn-block' %>
