--- a/app/views/pictures/confirm.html.erb
+++ b/app/views/pictures/confirm.html.erb
@@ -2,12 +2,15 @@
   <div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
     <h3>投稿確認画面。</h3>
     <%= form_for(@picture) do |f| %>
+    <%= f.hidden_field :image_cache %>
+    <%= image_tag @picture.image.url if @picture.image? %>
     <!-- `f.hidden_field`を使用して、リクエストパラメータに値を設定できるようにしています。 -->
-      <%= f.hidden_field :content %>
-      <!-- @blog.titleと@blog.contentとすることで、表示用の値を画面に出力しています。 -->
-      <p>本文:<%= @picture.content %></p>
-      <%= f.submit "投稿する",class: 'btn btn-primary btn-block' %>
+    <%= f.hidden_field :content %>
+    <!-- @picture.titleと@picture.contentとすることで、表示用の値を画面に出力しています。 -->
+    <p>本文:<%= @picture.content %></p>
+    <%= f.submit "投稿する",class: 'btn btn-primary btn-block' %>
     <% end %>
+    <br>
     <%= form_for(@picture, url: new_picture_path, method: 'get') do |f| %>
       <%= f.hidden_field :content %>
       <%= f.submit "もどる", name: 'back',class: 'btn btn-default btn-block' %>
